--- a/loru.toml
+++ b/loru.toml
@@ -1,5 +1,5 @@
 [meta]
-schema_version = "0.3.0"
+schema_version = "0.3.2"
 
 [[lib]]
 name = "@loru/schemas"
@@ -16,12 +16,12 @@ name = "gen"
 description = "Validate schemas and regenerate TS/Rust bindings"
 cmd = "deno run -A scripts/validate-schemas.ts && deno run -A scripts/generate-ts.ts && deno run -A scripts/generate-rust.ts"
 
-[[task]]
-name = "check-rust"
+[[check.task]]
+stage = "check"
+description = "Validate schemas and type-check generated TS output if present"
+cmd = "deno run -A scripts/validate-schemas.ts && (test -f typescript/mod.ts && deno check typescript/mod.ts || echo \"No TS output to check\")"
+
+[[check.task]]
+stage = "test"
 description = "Format, lint, and test the Rust crate"
 cmd = "cd rust && cargo fmt -- --check && cargo check && cargo clippy && cargo test"
-
-[[task]]
-name = "check-ts"
-description = "Type-check generated TS output if present"
-cmd = "if test -f typescript/mod.ts; then deno check typescript/mod.ts; else echo \"No TS output to check\"; fi"
