--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,12 +1,10 @@
 [package]
 name = "loru-schemas"
-version = "0.3.0"
+version = "0.3.2"
 edition = "2021"
 [dependencies]
-serde = "[object Object]"
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 [lib]
 name = "loru_schemas"
 path = "src/lib.rs"
-[build]
-target-dir = "../.loru/cache/cargo-target"
