--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "loru-schemas"
-version = "0.3.2"
+version = "0.3.3"
 edition = "2021"
 [dependencies]
-serde = { version = "1.0", features = ["derive"] }
+serde = "[object Object]"
 serde_json = "1.0"
 [lib]
 name = "loru_schemas"
