--- a/deno.json
+++ b/deno.json
@@ -9,6 +9,7 @@
     "std/toml": "https://deno.land/std@0.208.0/toml/mod.ts"
   },
   "lint": {
+    "exclude": [".loru/"],
     "rules": {
       "tags": [
         "recommended"
@@ -17,7 +18,8 @@
   },
   "fmt": {
     "indentWidth": 2,
-    "singleQuote": false
+    "singleQuote": false,
+    "exclude": [".loru/"]
   },
   "lock": {
     "path": ".loru/deno.lock"
