--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,15 +1,11 @@
 [package]
 edition = "2021"
-name    = "loru-schemas"
-version = "0.3.3"
-
-  [package.metadata.loru]
-  lockfile = "../.loru/Cargo.lock"
-
+name = "loru-schemas"
+version = "0.3.4"
+metadata = "[object Object]"
 [dependencies]
-serde      = { version = "1.0", features = ["derive"] }
+serde = "[object Object]"
 serde_json = "1.0"
-
 [lib]
 name = "loru_schemas"
 path = "src/lib.rs"
