--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,11 +1,15 @@
 [package]
 edition = "2021"
-name = "loru-schemas"
+name    = "loru-schemas"
 version = "0.3.4"
-metadata = "[object Object]"
+
+  [package.metadata.loru]
+  lockfile = "../.loru/Cargo.lock"
+
 [dependencies]
-serde = "[object Object]"
+serde      = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
 [lib]
 name = "loru_schemas"
 path = "src/lib.rs"
